--- a/MyFirstApp/Base.lproj/Main.storyboard
+++ b/MyFirstApp/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="SN4-4c-XIB">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="D13-Gh-zOq">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
@@ -202,7 +202,7 @@
                                     <action selector="blue:" destination="D13-Gh-zOq" eventType="touchUpInside" id="ott-df-Y8c"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JrY-OJ-YzH">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JrY-OJ-YzH">
                                 <rect key="frame" x="7" y="59" width="109" height="218"/>
                                 <color key="backgroundColor" red="0.040299845110000003" green="0.78039215689999997" blue="0.32761909830000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <state key="normal" title="Button"/>
@@ -271,44 +271,96 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="arrow.up" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="smx-Sw-Ff1">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="arrow.up" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="smx-Sw-Ff1">
                                 <rect key="frame" x="245" y="319" width="81" height="29"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="tintColor" systemColor="labelColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="31" id="lTa-ob-a3h"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Call Us" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ubr-Bf-IbL">
+                                <rect key="frame" x="20" y="567" width="88" height="45"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="88" id="cVi-RO-1jq"/>
+                                    <constraint firstAttribute="height" constant="45" id="r2Z-bG-GgG"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="27"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="201-752-1626" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="U9v-on-dXu">
+                                <rect key="frame" x="141" y="567" width="253" height="45"/>
+                                <gestureRecognizers/>
+                                <fontDescription key="fontDescription" type="system" pointSize="27"/>
+                                <color key="textColor" systemColor="tintColor"/>
+                                <color key="highlightedColor" red="0.070588235289999995" green="0.69803921570000005" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <connections>
+                                    <outletCollection property="gestureRecognizers" destination="AGR-7N-jNq" appends="YES" id="nMx-tK-do6"/>
+                                </connections>
+                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="VG5-xK-iHw">
+                                <rect key="frame" x="80" y="405" width="240" height="128"/>
+                                <gestureRecognizers/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="128" id="6wX-cg-R4e"/>
+                                </constraints>
+                                <connections>
+                                    <outletCollection property="gestureRecognizers" destination="vRk-RU-gpX" appends="YES" id="5Zh-cC-xe2"/>
+                                </connections>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="7zW-JA-zvD"/>
                         <color key="backgroundColor" systemColor="systemYellowColor"/>
                         <constraints>
+                            <constraint firstItem="smx-Sw-Ff1" firstAttribute="trailing" secondItem="Rfj-wH-mkc" secondAttribute="trailing" id="1gb-Fh-v9V"/>
                             <constraint firstItem="7zW-JA-zvD" firstAttribute="bottom" secondItem="vcl-0B-PoA" secondAttribute="bottom" constant="755" id="2Ik-2E-Sq6"/>
                             <constraint firstItem="vcl-0B-PoA" firstAttribute="top" secondItem="7zW-JA-zvD" secondAttribute="top" constant="15" id="3mj-92-sTQ"/>
                             <constraint firstItem="7zW-JA-zvD" firstAttribute="trailing" secondItem="vcl-0B-PoA" secondAttribute="trailing" constant="109" id="4Pl-MV-sZI"/>
                             <constraint firstItem="YgT-gY-8o1" firstAttribute="top" secondItem="uet-Bn-TB7" secondAttribute="bottom" constant="83" id="5W6-58-M1d"/>
+                            <constraint firstItem="U9v-on-dXu" firstAttribute="trailing" secondItem="uet-Bn-TB7" secondAttribute="trailing" id="5cw-el-kmf"/>
                             <constraint firstItem="7zW-JA-zvD" firstAttribute="bottom" secondItem="YgT-gY-8o1" secondAttribute="bottom" constant="641" id="73c-3G-ynb"/>
                             <constraint firstItem="UTJ-Ye-T6h" firstAttribute="leading" secondItem="JrY-OJ-YzH" secondAttribute="trailing" constant="-51" id="De3-TC-flO"/>
                             <constraint firstItem="JrY-OJ-YzH" firstAttribute="baseline" secondItem="Rfj-wH-mkc" secondAttribute="baseline" id="ECI-0n-pRl"/>
                             <constraint firstItem="JrY-OJ-YzH" firstAttribute="top" secondItem="7zW-JA-zvD" secondAttribute="top" constant="15" id="GWc-Sg-VZ9"/>
+                            <constraint firstItem="VG5-xK-iHw" firstAttribute="top" secondItem="smx-Sw-Ff1" secondAttribute="bottom" constant="56" id="HvK-p4-QNB"/>
+                            <constraint firstItem="VG5-xK-iHw" firstAttribute="leading" secondItem="7zW-JA-zvD" secondAttribute="leading" constant="80" id="I6J-fu-wiQ"/>
                             <constraint firstItem="JrY-OJ-YzH" firstAttribute="leading" secondItem="Rfj-wH-mkc" secondAttribute="leading" id="Jkb-rr-8ih"/>
+                            <constraint firstItem="Ubr-Bf-IbL" firstAttribute="baseline" secondItem="U9v-on-dXu" secondAttribute="baseline" id="K6F-t2-DPU"/>
                             <constraint firstItem="UTJ-Ye-T6h" firstAttribute="baseline" secondItem="YgT-gY-8o1" secondAttribute="firstBaseline" constant="-123" id="QK0-Ct-Mgw"/>
                             <constraint firstItem="7zW-JA-zvD" firstAttribute="bottom" secondItem="JWQ-X4-o9A" secondAttribute="bottom" constant="534" id="Sky-V8-fhj"/>
                             <constraint firstItem="JrY-OJ-YzH" firstAttribute="top" secondItem="uet-Bn-TB7" secondAttribute="top" id="Vkb-ip-iV5"/>
                             <constraint firstItem="JWQ-X4-o9A" firstAttribute="leading" secondItem="7zW-JA-zvD" secondAttribute="leading" constant="135" id="W2E-lB-eFY"/>
+                            <constraint firstItem="Ubr-Bf-IbL" firstAttribute="leading" secondItem="7Jb-kP-BHN" secondAttribute="leadingMargin" id="bVA-JQ-YLn"/>
+                            <constraint firstItem="Ubr-Bf-IbL" firstAttribute="top" secondItem="VG5-xK-iHw" secondAttribute="bottom" constant="34" id="d3t-g3-4Ab"/>
                             <constraint firstItem="uet-Bn-TB7" firstAttribute="leading" secondItem="7zW-JA-zvD" secondAttribute="leading" constant="7" id="eOZ-7D-2s8"/>
                             <constraint firstItem="YgT-gY-8o1" firstAttribute="leading" secondItem="7zW-JA-zvD" secondAttribute="leading" constant="61" id="eim-Xo-OxP"/>
+                            <constraint firstItem="smx-Sw-Ff1" firstAttribute="top" secondItem="Rfj-wH-mkc" secondAttribute="bottom" constant="41" id="gkg-r0-Kbf"/>
                             <constraint firstItem="qPZ-wa-wxn" firstAttribute="top" secondItem="7zW-JA-zvD" secondAttribute="top" constant="155" id="hHZ-Jw-pvw"/>
                             <constraint firstAttribute="trailingMargin" secondItem="uet-Bn-TB7" secondAttribute="trailing" id="kFc-gL-bN1"/>
+                            <constraint firstItem="Ubr-Bf-IbL" firstAttribute="firstBaseline" secondItem="U9v-on-dXu" secondAttribute="firstBaseline" id="mNP-66-n86"/>
                             <constraint firstItem="uet-Bn-TB7" firstAttribute="leading" secondItem="JrY-OJ-YzH" secondAttribute="leading" id="nj4-c7-EOu"/>
                             <constraint firstItem="qPZ-wa-wxn" firstAttribute="leading" secondItem="7zW-JA-zvD" secondAttribute="leading" constant="230" id="orT-Sl-D3d"/>
+                            <constraint firstAttribute="bottom" secondItem="Ubr-Bf-IbL" secondAttribute="bottom" constant="284" id="sQh-8z-s2H"/>
+                            <constraint firstItem="smx-Sw-Ff1" firstAttribute="leading" secondItem="7zW-JA-zvD" secondAttribute="leading" constant="245" id="sil-VM-QPs"/>
+                            <constraint firstItem="U9v-on-dXu" firstAttribute="leading" secondItem="Ubr-Bf-IbL" secondAttribute="trailing" constant="33" id="thd-ah-4tR"/>
                             <constraint firstItem="7zW-JA-zvD" firstAttribute="trailing" secondItem="Rfj-wH-mkc" secondAttribute="trailing" constant="88" id="u3R-BQ-rh6"/>
+                            <constraint firstItem="VG5-xK-iHw" firstAttribute="centerX" secondItem="uet-Bn-TB7" secondAttribute="centerX" id="vSZ-Wc-eAU"/>
                             <constraint firstItem="JrY-OJ-YzH" firstAttribute="centerX" secondItem="YgT-gY-8o1" secondAttribute="centerX" constant="-7.5" id="wfq-L7-bTG"/>
                             <constraint firstItem="7zW-JA-zvD" firstAttribute="trailing" secondItem="UTJ-Ye-T6h" secondAttribute="trailing" constant="337" id="xWm-Ez-Cia"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="callNumberLabel" destination="U9v-on-dXu" id="2PZ-wA-hbM"/>
                         <outlet property="stepperLabel" destination="v8l-aP-Elp" id="vx4-F9-mpx"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xtO-vj-8MI" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="AGR-7N-jNq">
+                    <connections>
+                        <action selector="callThisNumber:" destination="D13-Gh-zOq" id="ORf-3L-zGr"/>
+                    </connections>
+                </tapGestureRecognizer>
+                <swipeGestureRecognizer direction="right" id="vRk-RU-gpX"/>
             </objects>
             <point key="canvasLocation" x="720.28985507246387" y="117.85714285714285"/>
         </scene>
@@ -588,21 +640,37 @@
             </objects>
             <point key="canvasLocation" x="3555" y="118"/>
         </scene>
-        <!--View Controller-->
+        <!--Download Image View Controller-->
         <scene sceneID="fxS-DY-CPv">
             <objects>
-                <viewController id="MXi-0e-tBK" sceneMemberID="viewController">
+                <viewController id="MXi-0e-tBK" customClass="DownloadImageViewController" customModule="MyFirstApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="yhE-0I-XRR">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="x1j-Xx-uZ1">
+                                <rect key="frame" x="20" y="51" width="374" height="387"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="x1j-Xx-uZ1" secondAttribute="height" multiplier="374:387" id="mDl-8r-3GA"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="VQl-ia-uRF"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="VQl-ia-uRF" firstAttribute="trailing" secondItem="x1j-Xx-uZ1" secondAttribute="trailing" constant="20" id="MHK-Il-vkb"/>
+                            <constraint firstItem="x1j-Xx-uZ1" firstAttribute="leading" secondItem="VQl-ia-uRF" secondAttribute="leading" constant="20" id="mQN-81-d28"/>
+                            <constraint firstItem="x1j-Xx-uZ1" firstAttribute="top" secondItem="VQl-ia-uRF" secondAttribute="top" constant="7" id="oEj-uO-LYX"/>
+                        </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="" systemItem="mostViewed" id="3iW-up-LHi"/>
+                    <connections>
+                        <outlet property="myImageView" destination="x1j-Xx-uZ1" id="HWp-xm-Xd2"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="XsA-6r-6tB" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="5345" y="413"/>
+            <point key="canvasLocation" x="5344.9275362318849" y="412.5"/>
         </scene>
         <!--Image View Controller-->
         <scene sceneID="31a-HI-FsR">
@@ -745,6 +813,9 @@
         </systemColor>
         <systemColor name="systemYellowColor">
             <color red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="tintColor">
+            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
